; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/mshtml/extr_pluginhost.c_install_codebase.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/mshtml/extr_pluginhost.c_install_codebase.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { i32, %struct.TYPE_8__, %struct.TYPE_6__ }
%struct.TYPE_8__ = type { i32* }
%struct.TYPE_6__ = type { i32* }

@InstallCallbackVtbl = common dso_local global i32 0, align 4
@WindowForBindingUIVtbl = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [14 x i8] c"FAILED: %08x\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*)* @install_codebase to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @install_codebase(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca %struct.TYPE_7__*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  store i32* %0, i32** %2, align 8
  %6 = call %struct.TYPE_7__* @heap_alloc(i32 24)
  store %struct.TYPE_7__* %6, %struct.TYPE_7__** %3, align 8
  %7 = load %struct.TYPE_7__*, %struct.TYPE_7__** %3, align 8
  %8 = icmp ne %struct.TYPE_7__* %7, null
  br i1 %8, label %10, label %9

9:                                                ; preds = %1
  br label %41

10:                                               ; preds = %1
  %11 = load %struct.TYPE_7__*, %struct.TYPE_7__** %3, align 8
  %12 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %11, i32 0, i32 1
  %13 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %12, i32 0, i32 0
  store i32* @InstallCallbackVtbl, i32** %13, align 8
  %14 = load %struct.TYPE_7__*, %struct.TYPE_7__** %3, align 8
  %15 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %14, i32 0, i32 2
  %16 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %15, i32 0, i32 0
  store i32* @WindowForBindingUIVtbl, i32** %16, align 8
  %17 = load %struct.TYPE_7__*, %struct.TYPE_7__** %3, align 8
  %18 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %17, i32 0, i32 0
  store i32 1, i32* %18, align 8
  %19 = load %struct.TYPE_7__*, %struct.TYPE_7__** %3, align 8
  %20 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %19, i32 0, i32 1
  %21 = call i32 @CreateAsyncBindCtx(i32 0, %struct.TYPE_8__* %20, i32* null, i32** %4)
  store i32 %21, i32* %5, align 4
  %22 = load %struct.TYPE_7__*, %struct.TYPE_7__** %3, align 8
  %23 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %22, i32 0, i32 1
  %24 = call i32 @IBindStatusCallback_Release(%struct.TYPE_8__* %23)
  %25 = load i32, i32* %5, align 4
  %26 = call i64 @FAILED(i32 %25)
  %27 = icmp ne i64 %26, 0
  br i1 %27, label %28, label %29

28:                                               ; preds = %10
  br label %41

29:                                               ; preds = %10
  %30 = load i32*, i32** %2, align 8
  %31 = load i32*, i32** %4, align 8
  %32 = call i32 @AsyncInstallDistributionUnit(i32* null, i32* null, i32* null, i32 0, i32 0, i32* %30, i32* %31, i32* null, i32 0)
  store i32 %32, i32* %5, align 4
  %33 = load i32*, i32** %4, align 8
  %34 = call i32 @IBindCtx_Release(i32* %33)
  %35 = load i32, i32* %5, align 4
  %36 = call i64 @FAILED(i32 %35)
  %37 = icmp ne i64 %36, 0
  br i1 %37, label %38, label %41

38:                                               ; preds = %29
  %39 = load i32, i32* %5, align 4
  %40 = call i32 @WARN(i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str, i64 0, i64 0), i32 %39)
  br label %41

41:                                               ; preds = %9, %28, %38, %29
  ret void
}

declare dso_local %struct.TYPE_7__* @heap_alloc(i32) #1

declare dso_local i32 @CreateAsyncBindCtx(i32, %struct.TYPE_8__*, i32*, i32**) #1

declare dso_local i32 @IBindStatusCallback_Release(%struct.TYPE_8__*) #1

declare dso_local i64 @FAILED(i32) #1

declare dso_local i32 @AsyncInstallDistributionUnit(i32*, i32*, i32*, i32, i32, i32*, i32*, i32*, i32) #1

declare dso_local i32 @IBindCtx_Release(i32*) #1

declare dso_local i32 @WARN(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
